Fixed issue with login/register option redirecting on existing page on mobile view

--- a/static/allauth_css/allauth.css
+++ b/static/allauth_css/allauth.css
@@ -31,5 +31,3 @@ input[type="submit"] {
     padding: .5rem;
     font-size: 1.25rem;
 }
-
-.wrapper-password-change {}
